Committing a version with functionalities implemented
Committing a version with functionalities implemented.

Unit Tests are not done yet.

--- a/XPOAPITest/XPOAPITest.csproj
+++ b/XPOAPITest/XPOAPITest.csproj
@@ -23,4 +23,16 @@
     <PackageReference Include="RestSharp" Version="107.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Sample Data\sample 1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Sample Data\sample 2.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Sample Data\sample 3.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
