--- a/XPOAPITest/XPOAPITest.UI.csproj
+++ b/XPOAPITest/XPOAPITest.UI.csproj
@@ -63,6 +63,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\XPOAPITest.Common\XPOAPITest.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Sample Data\sample 1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
